layout issues in props collection

--- a/projects/app/src/app/collect-properties-favorable/collect-properties-favorable.component.less
+++ b/projects/app/src/app/collect-properties-favorable/collect-properties-favorable.component.less
@@ -4,11 +4,10 @@
     display: flex;
     flex-flow: column;
     align-items: center;
-    height: 100%;
     width: 100%;
-    overflow: hidden;
     gap: 15px;
-    padding: 16px 32px;
+    padding: 16px 0;
+    padding-bottom: 0;
 
     .pins {
         display: flex;
@@ -79,13 +78,21 @@
         }
     }
 
+    .initial, .selected {
+        width: 100%;
+        position: sticky;
+        bottom: 0;
+        background-color: @color-creme;
+        box-shadow: 0px 0px 16px 0px rgba(78, 2, 178, 0.20);
+        padding: 16px;
+    }
+
     .initial {
         flex: 0 0 auto;
         display: flex;
         flex-flow: row nowrap;
         gap: 20px;
         height: fit-content;
-        position: relative;
 
         .prefer, .prevent {
             display: flex;
@@ -97,6 +104,8 @@
             justify-content: flex-end;
             padding-bottom: 25px;
             gap: 8px;
+            animation: slideInUp2 0.5s ease-out forwards;
+            transform: translateY(200%);
 
             .font-sans;
             font-size: 18px;
@@ -115,12 +124,13 @@
 
         .prefer {
             background-color: fade(@color-prefer, 15%);
-            color: @color-prefer-dark
+            color: @color-prefer-dark;
         }
 
         .prevent {
             background-color: fade(@color-prevent, 15%);
-            color: @color-prevent-dark
+            color: @color-prevent-dark;
+            animation-delay: 1s;
         }
     }
 
