--- a/projects/app/src/app/collect-properties/collect-properties.component.less
+++ b/projects/app/src/app/collect-properties/collect-properties.component.less
@@ -1,8 +1,8 @@
 @import '../../common.less';
 
 .spacer {
-    position: absolute;
-    bottom: 0;
+    // position: absolute;
+    // bottom: 0;
     width: 100%;
     height: 100%;
     overflow: visible;
