--- a/projects/app/src/app/direct-to-map/direct-to-map.component.less
+++ b/projects/app/src/app/direct-to-map/direct-to-map.component.less
@@ -8,7 +8,7 @@
     height: 100%;
     width: 100%;
     position: relative;
-    overflow: hidden;
+    // overflow: hidden;
 
     app-completion-image {
         position: absolute;
