--- a/projects/app/src/common.less
+++ b/projects/app/src/common.less
@@ -51,6 +51,7 @@
     padding: 16px 24px;
     max-width: calc(100% ~'-' 32px);
     transition: border-radius 0.3s ease-in-out;
+    z-index: 1;
 
     ::ng-deep * {
         margin: 0;
@@ -184,6 +185,15 @@
 @keyframes slideInUp {
     from {
         transform: translateY(100%);
+    }
+    to {
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideInUp2 {
+    from {
+        transform: translateY(200%);
     }
     to {
         transform: translateY(0);
